Monday morning commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>WDI Project 1</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <!-- <link href="http://www.fontspace.com/jonathan-paterson/london-tube.ttf" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/style.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="js/app.js" charset="utf-8"></script>
 </head>
 <body>
@@ -20,7 +22,7 @@
 
     <div class="instructions">
       <!-- this is where the game instructions will display -->
-      <p>The London Underground has 11 lines. Can you beat the clock and correctly guess the number of stations on each line?</p>
+      <p>The London Underground has 11 lines. How quickly can you correctly guess the number of stations on each line? </p>
     </div>
     <div class="lineName">
       <!-- this is where the line or station name will be displayed -->
@@ -60,7 +62,7 @@
   </div>
 </div>
 
-<footer> Made by Marisa</footer>
+<footer> GA WDI Project 1 - Made by Marisa</footer>
 
 </body>
 </html>
