--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="instructions">
       <!-- this is where the game instructions will display -->
-      <p>The London Underground has 11 lines. How quickly can you correctly guess the number of stations on each line? </p>
+      <p>Can you correctly match every London Tube station with it's corresponding line?</p>
     </div>
 
     <div class="startGame">
@@ -38,26 +38,22 @@
       </ul>
     </div>
 
+<!-- this is where the game displays whether player's selection is either correct or wrong - if wrong it should tell the player how many more they need to select  -->
     <div class="display">
-      <p></p>
+      <p id="gameResponse"></p>
     </div>
 
-    <!-- this button will submit the player's selection (and hold it somewhere to calculate score) -->
+    <!-- this button will submit the player's selection-->
     <div class="submit">
       <button name="button">Submit Your Answer</button>
     </div>
 
-
-    <!-- do i need a results here or have a results of all at game's end? -->
-    <!-- <div>
-    <p>Result: <span class="result"></span></p>
-  </div> -->
-
+    <!-- clicking on reset button should generate warning 'Are you sure you want to reset? All your progress will be lost.' -->
   <div>
-    <!-- clicking on reset button should generate alert 'are you sure you want to reset, all your selections will be lost' -->
     <button class="reset">Reset!</button>
   </div>
 
+<!-- this will be a counter that counts the length of game play (in seconds/minutes). this will commence as soon as the player selects 'start'  -->
   <div>
     <p id="timer">0</p>
   </div>
