--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 
   <header>
     <div id="logo1">
-      <h1><img src="images/logo.png" /></h1>
-
-    </header>
+      <h1><img src="images/logo.png" alt="logo"/></h1>
+    </div>
+  </header>
 
     <div class="main">
+
+      <div id="tubeImage">
+        <img src="images/tubemap-2012-12.png" alt="Tube Map Image"/>
+      </div>
 
       <div class="instructions">
         <!-- this is where the game instructions will display -->
@@ -27,7 +31,6 @@
       </div>
 
       <div>
-
         <button class="startGame" type="button" name="button">Start</button>
       </div>
 
@@ -70,7 +73,7 @@
     <p>Score:<span id="score"></span></p>
   </div> -->
 
-  <footer> <em>'Knowing Underground'</em> - GA WDI Project 1 - Made by Marisa</footer>
+  <footer> <em>'Knowing Underground'</em> &#x1f685 GA WDI Project 1 &#x1f684 Made by Marisa &#x1f688</footer>
 
 </body>
 </html>
