updating game header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <div id="logo1">
       <h1><img src="images/logo.png" alt="logo"/></h1>
-      <h2 class="lineisit">Whose line is it anyway?</h2>
+      <h2 class="lineisit">How well do you know the London Underground?</h2>
     </div>
   </header>
 
